--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-native-fontawesome": "^0.1.0",
-    "expo": "^34.0.1",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.3.0",
-    "react-native-svg": "^9.9.4",
-    "react-native-web": "^0.11.4",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "expo": "^47.0.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.8.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^6.0.0"
+    "babel-preset-expo": "~9.2.1"
   },
   "private": true
 }
